# carbonyl

./: .gitignore  .gitleaks.toml  .gitmodules  AGENTS.md  AIWG.md  CLAUDE.md  Cargo.toml  Dockerfile  MAINTENANCE.md  RELEASE-v0.2.0-alpha.1.md  RELEASE-v0.2.0-alpha.3.md  RELEASE-v0.2.0-alpha.4.md  build.rs  changelog.md  cliff.toml  deny.toml  package-lock.json  package.json  readme.md  rust-toolchain.toml
.agents/skills/aiwg-issue/: SKILL.md
.agents/skills/aiwg-regenerate/: SKILL.md
.agents/skills/aiwg-status/: SKILL.md
.agents/skills/aiwg-utils-quickref/: SKILL.md
.aiwg/: .milestones.json  AIWG.md  aiwg.config
.aiwg/.index/codebase/: checksum-manifest.json  metadata.json  stats.json
.aiwg/.index/project/: checksum-manifest.json  dependencies.json  metadata.json  stats.json
.aiwg/architecture/: adr-001.md  adr-002.md  adr-003.md  adr-004.md  adr-005-terminal-rendering-approach.md  software-architecture-doc.md
.aiwg/deployment/: ci-cd-scaffold.md
.aiwg/frameworks/: registry.json
.aiwg/intake/: intake-form.md  option-matrix.md  project-intake.md  risk-screening.md  solution-profile.md
.aiwg/planning/: iteration-001-plan.md
.aiwg/reports/: abm-gate-report.md  construction-ready-brief.md  lom-gate-report.md  phase0-w01-patch-audit.md  phase0-w06-parity-report.md
.aiwg/requirements/: nfr-register.md  use-cases.md  user-stories.md
.aiwg/research/: spike-241-sixel-rendering.md
.aiwg/smiths/toolsmith/: runtime-info.md  runtime.json
.aiwg/team/: team-profile.md
.aiwg/testing/: test-strategy.md
.aiwg/working/architecture/: sad-review-security.md  sad-review-testability.md  sad-review-traceability.md
.aiwg/working/sdlc-accelerate/: state.json
.aiwg/working/synthesis-reports/: sad-synthesis-2026-04-03.md
.aiwg/working/trusted-automation/: 00-vision.md  01-requirements.md  02-architecture.md  03-threat-model.md  04-test-strategy.md  05-phase-plan.md  06-research-index.md  07-fingerprint-registry-design.md  08-roadmap.md  09-ci-plan.md  README.md
.gitea/: builder-image-pin
.gitea/workflows/: build-builder.yml  build-runtime-arm64.yml  build-runtime-macos.yml  build-runtime.yml  check.yml  mirror.yml  publish-image.yml  release.yml  security-audit.yml  test-text-parity.yml  validate-patches.yml
.github/workflows/: ci.yml  docker.yml
automation/: browser.py  daemon.py  requirements.txt  screen_inspector.py  usps_pobox.py
chromium/: .gclient
chromium/patches/chromium/: 0001-Add-Carbonyl-library.patch  0002-Add-Carbonyl-service.patch  0003-Setup-shared-software-rendering-surface.patch  0004-Setup-browser-default-settings.patch  0005-Remove-some-debug-assertions.patch  0006-Setup-display-DPI.patch  0007-Disable-text-effects.patch  0008-Fix-text-layout.patch  0009-Bridge-browser-into-Carbonyl-library.patch  0010-Conditionally-enable-text-rendering.patch  0011-Rename-carbonyl-Renderer-to-carbonyl-Bridge.patch  0012-Create-separate-bridge-for-Blink.patch  0013-Refactor-rendering-bridge.patch  0014-Move-Skia-text-rendering-control-to-bridge.patch  0015-fix-build-add-missing-google_benchmark-buildconfig.g.patch  0016-fix-viz-replace-ResourceFormat-with-SinglePlaneForma.patch  0017-fix-ui-use-raw_ptr-for-CompositorDelegate-member-M12.patch  0018-fix-m120-fix-compile-errors-in-render_frame_impl-and.patch  0019-fix-m120-fix-Skia-API-changes-in-render_frame_impl.c.patch  0025-fix-m147-finalize-post-rebase-API-drift-fixes.patch  (+23 more)
docs/: SIGNING.md  adr-001-language-architecture.md  adr-002-trusted-input-approach.md  adr-003-native-install-packages.md  adr-004-container-image.md  api-specification.md  architecture.md  changelog.md  chromium-integration.md  chromium-upgrade-plan.md  ci-cd-plan.md  ci-runner-mutsu.md  ci-runner-titan.md  ci-secrets.md  cross-layer-audit-2026-04.md  development-guide.md  framebuffer-backend.md  install.md  integration-guide.md  license-review.md  maintenance.md  migration-plan.md  pdf-rendering.md  presence-layer.md  runtime-modes.md  rust-chromium-boundary.md  session-model.md  upstream-issue-roadmap-2026-07-06.md
docs/blog/: 2026-4-carbonyl-april-2026-report.md  2026-5-carbonyl-may-2026-report.md  2026-6-carbonyl-june-2026-report.md  _manifest.json
docs/releases/: RELEASE-v0.2.0-alpha.1.md  RELEASE-v0.2.0-alpha.10.md  RELEASE-v0.2.0-alpha.18.md  RELEASE-v0.2.0-alpha.4.md  RELEASE-v0.2.0-alpha.5.md  RELEASE-v0.2.0-alpha.7.md  RELEASE-v0.2.0-alpha.8.md  RELEASE-v0.2.0-alpha.9.md
keys/: carbonyl-release.asc
packaging/: README.md
packaging/linux/: AppRun  carbonyl.desktop  carbonyl.launcher
packaging/macos/: GATEKEEPER.txt  postinstall
scripts/: audit-cross-layer.sh  build-local.sh  build-macos.sh  build.sh  changelog.sh  docker-runtime-context.sh  env.sh  mutsu-build-linux-arm64.sh  mutsu-build-macos.sh  mutsu-package-macos.sh  npm-package.mjs  package-image.sh  package-linux.sh  package-macos.sh  patches.sh  release.sh  runtime-hash.sh  runtime-prune.sh  runtime-pull.sh  runtime-push.sh  smoke-packages.sh  test-b64-text.sh  test-cdp.sh  test-text-parity.sh  test-x-mirror.sh  titan-x64-preflight.sh  verify-release-asset-version.sh  verify-release-metadata.sh
src/: input.rs  lib.rs  output.rs
src/blink/: BUILD.gn  text_capture.cc  text_capture.h
src/browser/: BUILD.gn  accessibility_handler.cc  accessibility_handler.h  args.gn  args.macos.gn  bridge.rs  dump_text_handler.cc  dump_text_handler.h  host_display_client.cc  host_display_client.h  javascript_dialog_manager.cc  javascript_dialog_manager.h  javascript_handler.cc  javascript_handler.h  network_handler.cc  network_handler.h  renderer.cc  renderer.h  x_mirror.cc  x_mirror.h
src/cli/: cli.rs  program.rs  usage.txt
src/gfx/: color.rs  vector.rs
src/input/: evdev.rs  keyboard.rs  mouse.rs  parser.rs  tty.rs  utf8.rs
src/output/: framebuffer.rs  painter.rs  quad.rs  render_thread.rs  renderer.rs  screenshot.rs  sixel.rs  terminal_image.rs  window.rs
src/ui/: navigation.rs
src/utils/: four_bits.rs
src/viz/: BUILD.gn  carbonyl_software_output_device.cc  carbonyl_software_output_device.h
tests/fixtures/: b64-text-capture.html  x-mirror.html
(+59 files in other folders)
