import("//build/config/compiler/compiler.gni")
import("//mojo/public/tools/bindings/mojom.gni")

mojom("mojom") {
  sources = [ "carbonyl.mojom" ]

  deps = [
    "//ui/gfx/geometry/mojom",
    "//skia/public/mojom",
  ]
}

component("bridge") {
  output_name = "carbonyl_bridge"
  defines = [ "CARBONYL_BRIDGE_IMPLEMENTATION" ]
  sources = [
    "bridge.cc",
    "bridge.h",
  ]
}

component("viz") {
  output_name = "carbonyl_viz"
  defines = [ "CARBONYL_VIZ_IMPLEMENTATION" ]
  sources = [
    "host_display_client.cc",
    "host_display_client.h",
    "x_mirror.cc",
    "x_mirror.h",
  ]

  deps = [
    ":renderer",
    "//base",
    "//components/viz/host",
    "//services/viz/privileged/mojom",
    "//ui/gfx",
  ]

  if (is_linux) {
    # libX11 is provided by the Chromium Debian sysroot; optional X
    # mirror surface in x_mirror.cc links against it unconditionally.
    # Gated at runtime by CARBONYL_X_MIRROR=1 so headless deployments
    # pay zero cost beyond the link.
    libs = [ "X11" ]
  }
}

config("lib") {
  target = ""

  if (current_cpu == "x64") {
    target += "x86_64-"
  } else if (current_cpu == "arm64") {
    target += "aarch64-"
  }

  if (is_mac) {
    target += "apple-darwin"
  } else if (is_linux) {
    target += "unknown-linux-gnu"
  }

  libs = ["carbonyl"]
  lib_dirs = ["//carbonyl/build/$target/release"]
}

if (is_linux) {
  # libcarbonyl.so is built on the host and may reference GLIBC symbols
  # newer than Chromium's Debian Bullseye sysroot (GLIBC 2.31). This
  # public_config propagates --allow-shlib-undefined to the final
  # headless_shell link so lld does not reject libcarbonyl.so's versioned
  # symbol references. Those symbols are satisfied at runtime by the
  # user's system GLIBC.
  config("lib_ldflags") {
    ldflags = [ "-Wl,--allow-shlib-undefined" ]
  }
}

component("renderer") {
  output_name = "carbonyl_renderer"
  defines = [ "CARBONYL_RENDERER_IMPLEMENTATION" ]
  sources = [
    "render_service_impl.cc",
    "render_service_impl.h",
    "renderer.cc",
    "renderer.h",
  ]

  configs += [ ":lib" ]
  if (is_linux) {
    public_configs = [ ":lib_ldflags" ]
  }
  deps = [
    ":mojom",
    ":bridge",
    "//base",
    "//skia"
  ]
}
