headless_enable_commands = false
headless_use_embedded_resources = true

# Non-component build required: carbonyl's TextCaptureDevice inherits from
# internal Skia classes (SkDevice, SkClipStackDevice) whose symbols are not
# exported from the Skia shared library in a component build.
is_component_build = false

# Enable proprietary codecs such as H.264
ffmpeg_branding = "Chrome"
proprietary_codecs = true

# Disable unused dependencies
ozone_platform = "headless"
ozone_platform_x11 = false

use_static_angle = true

use_qt = false
use_gio = false
use_gtk = false
use_cups = false
# M147: use_dbus must be true — wayland ozone unconditionally depends on
# clipboard_util_linux which requires use_dbus.
use_dbus = true
use_glib = false
use_libpci = false
use_kerberos = false
use_vaapi_x11 = false
use_xkbcommon = false

angle_use_x11 = false
angle_use_wayland = false

rtc_use_x11 = false
rtc_use_pipewire = false
rtc_use_x11_extensions = false

# Linux only
# use_wayland_gbm = false
# use_system_libdrm = false
# use_system_minigbm = false

# Disable unused features
# Note (M135): Most feature flags below are left at their platform defaults.
# Setting them false in M135 triggers GN assert failures in test BUILD.gn
# files that are transitively loaded during gn gen (via the gn_all root group).
# headless_shell has its own if-guards and is unaffected by these defaults.
# Flags that are safe to disable (no file-level asserts in M135):
enable_nacl = false
enable_media_remoting = false
enable_system_notifications = false
