source_set("viz") {
  sources = [
    "carbonyl_software_output_device.cc",
    "carbonyl_software_output_device.h",
  ]

  deps = [
    "//base",
    "//components/viz/common/resources",
    "//components/viz/service/display",
    "//mojo/public/cpp/bindings",
    "//mojo/public/cpp/system",
    "//services/viz/privileged/mojom",
    "//skia",
    "//ui/gfx",
  ]

  if (!is_win) {
    deps += [ "//mojo/public/cpp/base:shared_memory" ]
  }
}
